--- a/Animal.html
+++ b/Animal.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Animals</h1>
     <ol>
-      <li><a href="Dog.jpeg" width="80%" target="_blank">Dogs</li></a>
-      <li><a href="Rabbit.jpeg" width="80%" target="_blank">Rabbits</li></a>
-      <li><a href="pig.jpeg" width="80%" target="_blank">Pigs</li></a>
+      <li><a href="https://mail.naver.com/read/image/?mailSN=9534&attachIndex=4&contentType=image/jpeg&offset=1621181&size=242024&maxSize=200&mimeSN=1606641883.514491.26625.1792&u=rudfla0923" width="100%" target="_blank">Dogs</li></a>
+      <li><a href="https://mail.naver.com/read/image/?mailSN=9534&attachIndex=2&contentType=image/jpeg&offset=1307&size=1125876&maxSize=200&mimeSN=1606641883.514491.26625.1792&u=rudfla0923" width="100%" target="_blank">Rabbits</li></a>
+      <li><a href="https://mail.naver.com/read/image/?mailSN=9534&attachIndex=3&contentType=image/jpeg&offset=1127489&size=493386&maxSize=200&mimeSN=1606641883.514491.26625.1792&u=rudfla0923" width="100%" target="_blank">Pigs</li></a>
     </ol>
   </body>
